<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/userFormView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:padding="10dp"
            android:text="@string/user_form"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/firstNameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:padding="10dp"
            android:text="@string/first_name"
            android:textColor="@color/primaryText"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userFormView" />


        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:autofillHints="no"
            android:hint="@string/enter_first_name"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/firstNameView" />

        <TextView
            android:id="@+id/lastNameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:padding="10dp"
            android:text="@string/last_name"
            android:textColor="@color/primaryText"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/firstName" />


        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:autofillHints="no"
            android:hint="@string/enter_last_name"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/lastNameView" />

        <TextView
            android:id="@+id/emailView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:padding="10dp"
            android:text="@string/email"
            android:textColor="@color/primaryText"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lastName" />


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:autofillHints="no"
            android:hint="@string/enter_email"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/emailView" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:paddingEnd="20dp"
            android:paddingBottom="15dp"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/primaryText"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:paddingEnd="20dp"
            android:paddingBottom="15dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/primaryText"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/save"
            app:layout_constraintTop_toBottomOf="@id/email" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>