<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="50sp"
            android:text="@string/welcome_screen"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:padding="10dp"
            android:id="@+id/welcomeScreenView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <TextView
           app:layout_constraintTop_toBottomOf="@id/welcomeScreenView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="20sp"
            android:text="@string/user_name"
            android:textColor="@color/primaryText"
            android:textSize="16sp"
            android:padding="10dp"
            android:id="@+id/userNameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <EditText
            android:layout_width="match_parent"
            android:padding="10dp"
            android:id="@+id/userName"
            android:hint="@string/enter_your_user_name"
            android:layout_marginStart="20sp"
            android:background="@drawable/edit_text_bg"
            android:layout_marginEnd="20sp"
            app:layout_constraintTop_toBottomOf="@id/userNameView"
            android:layout_height="wrap_content"/>

        <TextView
            app:layout_constraintTop_toBottomOf="@id/userName"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="20sp"
            android:text="@string/password"
            android:textColor="@color/primaryText"

            android:textSize="16sp"
            android:padding="10dp"
            android:id="@+id/passwordView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <EditText
            android:layout_width="match_parent"
            android:padding="10dp"
            android:hint="@string/enter_password"
            android:id="@+id/password"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:background="@drawable/edit_text_bg"
            app:layout_constraintTop_toBottomOf="@id/passwordView"
            android:layout_height="wrap_content"
            android:autofillHints="no" />

        <androidx.appcompat.widget.AppCompatButton
            app:layout_constraintTop_toBottomOf="@id/password"
            android:layout_width="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:id="@+id/login"
            android:textAllCaps="false"
            android:textSize="16sp"
           android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:background="@drawable/button_round_corner"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>