<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="user"
            type="com.app.applaunchtask.model.User" />
    </data>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:id="@+id/mainLay"
        app:cardCornerRadius="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:contentPadding="3dp"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/firstNameLay"
                android:padding="5dp"
                android:weightSum="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:text="@string/first_name"
                    android:textColor="@color/primaryText"
                    android:textSize="16sp"
                    android:padding="5dp"
                    android:layout_weight=".7"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:id="@+id/firstName"
                    android:layout_weight="1.3"
                    android:textColor="@color/primaryText"
                    android:textSize="16sp"
                    android:text="@{user.firstName}"
                    android:padding="5dp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/lastNameLay"
                android:layout_below="@id/firstNameLay"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:text="@string/last_name"
                    android:textColor="@color/primaryText"
                    android:textSize="16sp"
                    android:layout_weight=".7"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:id="@+id/lastName"
                    android:layout_weight="1.3"
                    android:textColor="@color/primaryText"
                    android:textSize="16sp"
                    android:text="@{user.lastName}"
                    android:padding="5dp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>


            <LinearLayout
                android:layout_below="@id/lastNameLay"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_weight=".7"
                    android:text="@string/email"
                    android:textColor="@color/primaryText"
                    android:textSize="16sp"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_weight="1.3"
                    android:id="@+id/email"
                    android:textColor="@color/primaryText"
                    android:textSize="16sp"
                    android:text="@{user.email}"
                    android:padding="5dp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>



        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</layout>