<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="weatherData"
            type="com.app.applaunchtask.model.WeatherResponse" />
    </data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/dateLay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="vertical"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/currentDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/temperature"
                    android:textColor="@color/primaryText"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <LinearLayout
                android:layout_marginTop="20dp"
                android:id="@+id/tempLay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dateLay">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tempView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/temperature"
                    android:textColor="@color/primaryText"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:textSize="20sp"
                    android:padding="10dp"
                   android:id="@+id/temperature"
                    android:textColor="@color/primaryText"
                    android:layout_height="wrap_content"/>
            </LinearLayout>



            <LinearLayout
                android:id="@+id/weatherTypeLay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dateLay">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/weather_type"
                    android:textColor="@color/primaryText"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:textSize="20sp"
                    android:padding="10dp"
                    android:id="@+id/weatherType"
                    android:textColor="@color/primaryText"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/humidityLay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tempLay">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/humidity"
                    android:textColor="@color/primaryText"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:textSize="20sp"
                    android:padding="10dp"
                    android:id="@+id/humidity"
                    android:textColor="@color/primaryText"
                    android:layout_height="wrap_content"/>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/windSpeedLay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintTop_toBottomOf="@id/weatherTypeLay">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/wind_speed"
                    android:textColor="@color/primaryText"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:textSize="20sp"
                    android:padding="10dp"
                    android:id="@+id/windSpeed"
                    android:textColor="@color/primaryText"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                app:layout_constraintTop_toBottomOf="@id/humidityLay"
                android:layout_width="match_parent"
                android:id="@+id/recyclerViewHour"
                android:layout_height="wrap_content"/>




        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</layout>